[project]
name = "arxiv-graph"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2",
    "arxiv>=2.4.1",
    "loguru>=0.7.3",
    "networkx>=3.6.1",
    "pydantic>=2.12.5",
    "sentence-transformers>=5.3.0",
    "sqlalchemy>=2.0.48",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]
